--- a/_posts/2017-02-14-lr-gwas.md
+++ b/_posts/2017-02-14-lr-gwas.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Stable Rankings with Logistic Regression Ensembles"
+title: "Be Cautious When Using Logistic Regression for GWAS"
 date: 2017-02-14 00:01:19
 categories: "machine learning"
 tags: ["bioinformatcs", "scientific computing"]
