--- a/_posts/2017-02-14-lr-gwas.md
+++ b/_posts/2017-02-14-lr-gwas.md
@@ -5,7 +5,7 @@ date: 2017-02-14 00:01:19
 categories: "machine learning"
 tags: ["bioinformatcs", "scientific computing"]
 ---
-Logistic regression models are commonly used to identify SNPs which are correlated with differences between phenotypes observed associated with population structures. Logistic Regression is particularly popular for genome-wide association studies (GWAS) of human diseases<sup>[1](#liu),[2](#stahl),[3](#hunter),[4](#shi),[5](#han),[6](#turnbull),[7](#chasman),[8](#kumar),[9](#cha),[10](#hu)</sup>.
+Logistic regression models are commonly used to identify SNPs which are correlated with differences between phenotypes associated with population structures. Logistic Regression is particularly popular for genome-wide association studies (GWAS) of human diseases<sup>[1](#liu),[2](#stahl),[3](#hunter),[4](#shi),[5](#han),[6](#turnbull),[7](#chasman),[8](#kumar),[9](#cha),[10](#hu)</sup>.
 
 When applied to SNPs, samples are assigned to classes in accordance with their phenotypes and their variants are encoded as a feature matrix.  A LR model is then trained.  The magnitudes of the weights from the LR model are used to rank the variants, with the top-ranked variants selected for further exploration.
 
