Insert missing word

--- a/_posts/2017-02-14-lr-gwas.md
+++ b/_posts/2017-02-14-lr-gwas.md
@@ -35,7 +35,7 @@ With ensembles of 250 models, we were able to achieve an agreement of 99% of the
 
 ## Conclusion
 
-Logistic Regression models trained with stochastic methods such as Stochastic Gradient Descent (SGD) do not necessarily produce the same weights from run to run. This does not generally affect accuracy, especially in cases with a large number of correlated variables. However, the variations in the weights do affect analyses such as ranking and variable selection. Researchers should be cautious when using Logistic Regression weights for ranking.
+Logistic Regression models trained with stochastic methods such as Stochastic Gradient Descent (SGD) do not necessarily produce the same weights from run to run. This does not generally affect classification accuracy, especially in cases with a large number of correlated variables. However, the variations in the weights do affect analyses such as ranking and variable selection. Researchers should be cautious when using Logistic Regression weights for ranking.
 
 We demonstrated that an ensemble approach can be used to stabilize the weights and consequently the resulting variable rankings.  Further validation work will be needed to determine if Logistic Regression ensembles are a suitable solution, but our results are promising.
 
