--- a/_posts/2017-02-14-lr-gwas.md
+++ b/_posts/2017-02-14-lr-gwas.md
@@ -5,7 +5,7 @@ date: 2017-02-14 00:01:19
 categories: "machine learning"
 tags: ["bioinformatcs", "scientific computing"]
 ---
-***(02/16/2017) Thanks to feedback on the [bioinformatics reddit](https://www.reddit.com/r/bioinformatics/comments/5u8f7i/be_cautious_when_using_logistic_regression_for/), it's been brought to my attention that most GWAS studies employ Logistic Regression for single-SNP association tests using software such as [SNPTEST](https://mathgen.stats.ox.ac.uk/genetics_software/snptest/snptest.html). This is different from the approach of incorporating all of the SNPs into a single Logistic Regression model as described below. [Marchini, et al.](http://www.nature.com/nrg/journal/v11/n7/abs/nrg2796.html) and [Balding](http://www.nature.com/nrg/journal/v7/n10/full/nrg1916.html) have written some excellent reviews of statistical practices in GWAS that discuss single-SNP association tests and other approaches.***
+* __(02/16/2017)__ Thanks to feedback on the [bioinformatics reddit](https://www.reddit.com/r/bioinformatics/comments/5u8f7i/be_cautious_when_using_logistic_regression_for/), it's been brought to my attention that most GWAS studies employ Logistic Regression for single-SNP association tests using software such as [SNPTEST](https://mathgen.stats.ox.ac.uk/genetics_software/snptest/snptest.html). This is different from the approach of incorporating all of the SNPs into a single Logistic Regression model as described below. [Marchini, et al.](http://www.nature.com/nrg/journal/v11/n7/abs/nrg2796.html) and [Balding](http://www.nature.com/nrg/journal/v7/n10/full/nrg1916.html) have written some excellent reviews of statistical practices in GWAS that discuss single-SNP association tests and other approaches.*
 
 Logistic regression models are commonly used to identify SNPs which are correlated with differences between phenotypes associated with population structures. Logistic Regression is particularly popular for genome-wide association studies (GWAS) of human diseases<sup>[1](#liu),[2](#stahl),[3](#hunter),[4](#shi),[5](#han),[6](#turnbull),[7](#chasman),[8](#kumar),[9](#cha),[10](#hu)</sup>.
 
